fix. Added missing meetup link and fixed spacing for logo-bar.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -32,8 +32,7 @@ html, body {
 .logo-menu {
     height: 70px;
     width: 100%;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding: 15px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -44,6 +43,16 @@ html, body {
 
 .logo-menu img {
     max-width: 50px;
+    margin-right: 10px;
+}
+
+.logo-menu .motto {
+    max-width: 40%;
+    font-size: 13px;
+}
+
+.logo-menu .motto header {
+    font-size: 18px;
 }
 
 main > section > header {
@@ -238,4 +247,8 @@ img {
 
 .color-youtube {
     color: #ff0000
+}
+
+.color-meetup {
+    color: #f64060;
 }
